# freeradius-lab

./: .ansible-lint  .dockerignore  .gh-secrets.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml
.github/workflows/: build-rpm.yml  deploy-test.yml  destroy.yml  docker-image.yml  grafana-dashboards.yml  lint.yml
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: docker.yml  ec2.yml
ansible/playbooks/: deploy-docker.yml  deploy.yml  smoke_test.yml
cli/: .env.example  .gitignore  dictionary  profiles.toml.example  pyproject.toml
cli/radcli/: client.py  config.py  display.py  main.py
cli/radcli/commands/: acct.py  auth.py  authz.py  health.py  profile.py  status.py
dashboards/: freeradius-overview.json  host-metrics.json  logs-explorer.json
docker/: Dockerfile  Dockerfile.build
docs/: DECISIONS.md  DEPLOY_ISSUES.md  OBSERVABILITY.md  OBSERVABILITY_PLAN.md  PROJECT_PLAN.md  RADIUS_NOTES.md  README.md
rpm/: build.sh  freeradius.spec
scripts/: configure_radius.sh  install_radius.sh  set-gh-secrets.sh  smoke_test.sh  verify-grafana-secrets.sh
terraform/: backend.tf  data.tf  ec2.tf  iam.tf  outputs.tf  provider.tf  s3.tf  security_groups.tf  user_data.sh.tpl  variables.tf  vpc.tf
terraform/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
terraform/grafana/: alerts_host.tf  alerts_log.tf  alerts_metric.tf  backend.tf  dashboards.tf  data.tf  folder.tf  outputs.tf  provider.tf  variables.tf
tests/: conftest.py  dictionary  pyproject.toml  test_accounting.py  test_auth.py  test_authorization.py
(+19 files in other folders)
